# shelf

./: .env.example  .gitignore  README.md  build.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
catalog/: admin.py  admin_site.py  api.py  api_urls.py  apps.py  forms.py  models.py  permissions.py  staff_forms.py  staff_urls.py  staff_views.py  urls.py  views.py
catalog/management/commands/: seed_catalog.py
catalog/migrations/: 0001_initial.py  0002_friendlier_field_labels.py  0004_staff_profile.py
catalog/tests/: test_admin.py  test_api.py  test_auth_shelf.py  test_models.py  test_security.py  test_seed.py  test_staff.py  test_team_account.py  test_views.py
config/: settings.py  urls.py
docs/screenshots/: README.md
docs/superpowers/plans/: 2026-07-19-shelf.md  2026-07-20-portfolio-closeout.md  2026-07-20-professional-polish.md
docs/superpowers/specs/: 2026-07-19-shelf-design.md
static/css/: site.css
static/js/: site.js
templates/: 404.html  500.html  base.html
templates/admin/: base_site.html  index.html  login.html
templates/catalog/: _book_card.html  about.html  author_detail.html  book_detail.html  book_list.html  home.html  my_shelf.html  signup.html
templates/registration/: login.html
templates/staff/: account.html  author_confirm_delete.html  author_form.html  author_list.html  base_staff.html  book_confirm_delete.html  book_form.html  book_list.html  category_confirm_delete.html  category_form.html  category_list.html  dashboard.html  saved_list.html  team_form.html  team_list.html
(+1 files in other folders)
