[project]
name = "shelter"
version = "0.1.0"
description = "Your Shelter — Django gospel publishing catalog (portfolio)"
requires-python = ">=3.12"
dependencies = [
  "Django>=5.0,<6",
  "djangorestframework>=3.15",
  "dj-database-url>=2.0",
  "python-dotenv>=1.0",
  "whitenoise>=6.0",
  "psycopg[binary]>=3.1",
  "gunicorn>=22.0",
]

[tool.vercel]
entrypoint = "config.wsgi:application"

[tool.vercel.scripts]
build = "python build.py"
